fix: insert background in line invisible

--- a/portfolio/src/app/components/education/education.component.css
+++ b/portfolio/src/app/components/education/education.component.css
@@ -10,10 +10,12 @@
   font-family: "Arial", sans-serif;
   color: #020133;
   top: 0;
+  margin-top: 0;
 }
 .start {
   width: 100%;
   height: 5rem;
+  background: #e5ecfb;
 }
 
 .heading span {
