--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -5,11 +5,13 @@
   margin-bottom: 2rem;
   font-family: "Arial", sans-serif;
   color: #020133;
+  margin-top: 0;
 }
 
 .start {
   width: 100%;
   height: 5rem;
+  background: #e5ecfb;
 }
 
 .work {
